# Branch_and_bounds_platform

./: .gitignore  CMakeLists.txt  kek  run.sh  simple_build.sh
src/docs/: sample_input.txt
src/include/: algorithm.hpp  backend.hpp  conjugate_coord_descent.hpp  core_constants.hpp  defines.hpp  eigen_ext.hpp  functional_computable.hpp  gradient_descent.hpp  index_bound_set.hpp  inflater.hpp  operations.hpp  solution.hpp  tasks.hpp  thread_pool.hpp  type_traits.hpp  types.hpp  utils.hpp
src/main/: backend.cpp  conjugate_coord_descent.cpp  eigen_ext.cpp  index_bound_set.cpp  inflater.cpp  operations.cpp  platform.cpp  solution.cpp  tasks.cpp  utils.cpp
src/tests/: compute_test.cpp
